# CudaViz

./: .gitignore  CMakeLists.txt  README.md  build.bat  build_console.bat  build_debug.bat  check_deps.bat  compile_shaders.bat
include/: Application.h  CudaCompute.h  VulkanRenderer.h  Window.h
shaders/: fragment.frag
src/: Application.cpp  CudaCompute.cpp  CudaKernels.cu  VulkanRenderer.cpp  Window.cpp  main.cpp  main_console.cpp
